--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/project
     docker:
-      - image: circleci/node:carbon
+      - image: circleci/node:10.0-browsers
     steps:
       - checkout
       - run:
