--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   build:
-    working_directory: ~/project
+    working_directory: ~/app
     docker:
       - image: circleci/node:10.9-browsers
     steps:
@@ -10,12 +10,37 @@ jobs:
       - run:
           name: Show the current branch
           command: echo ${CIRCLE_BRANCH}
+      - restore_cache:
+          keys: 
+            - dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install local dependencies
           command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+  test:
+    working_director: ~/app
+    docker:
+      - image: circleci/node:10.9-browsers
+    steps:
+      - checkout
+      - restore_cache:
+          keys: 
+            - dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: Linting
+          name: Lint
           command: npm run lint
       - run:
-          name: Testing
+          name: Test
           command: npm run test
+
+workflows:
+  version: 2
+  build_test_deploy:
+    jobs:
+      - build
+      - test
+          requires:
+            - build
