Add check for ng command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
           keys: 
             - dependency-cache-{{ checksum "package.json" }}
       - run:
+          name: Check ng
+          command: npx ng version
+      - run:
           name: Lint
           command: npm run lint
       - run:
