--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ jobs:
           command: echo ${CIRCLE_BRANCH}
       - restore_cache:
           keys: 
-            - dependency-cache-{{ checksum "package.json" }}-{{ epoch }}
+            - dependency-cache-{{ checksum "package.json" }}-{{ .BuildNum }}
       - run:
           name: Install local dependencies
           command: npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}-{{ epoch }}
+          key: dependency-cache-{{ checksum "package.json" }}-{{ .BuildNum }}
           paths:
             - ./node_modules
       - run:
@@ -31,7 +31,7 @@ jobs:
       - checkout
       - restore_cache:
           keys: 
-            - dependency-cache-{{ checksum "package.json" }}-{{ epoch }}
+            - dependency-cache-{{ checksum "package.json" }}-{{ .BuildNum }}
       - run:
           name: Lint
           command: npm run lint
