Test build commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,15 @@
-version: 2
+version: 2.1
+
+commands:
+  install_dependencies:
+    steps:
+      - restore_cache:
+          keys: 
+            - dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
+      - run:
+          name: Install local dependencies
+          command: npm install
+      
 
 jobs:
   build:
@@ -10,12 +21,7 @@ jobs:
       - run:
           name: Show the current branch
           command: echo ${CIRCLE_BRANCH}
-      - restore_cache:
-          keys: 
-            - dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
-      - run:
-          name: Install local dependencies
-          command: npm install
+     - install_dependencies
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
           paths:
@@ -29,12 +35,7 @@ jobs:
       - image: circleci/node:10.9-browsers
     steps:
       - checkout
-      - restore_cache:
-          keys: 
-            - dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
-      - run:
-          name: Install local dependencies
-          command: npm install
+      - install_dependencies
       - run:
           name: Lint
           command: npm run lint
@@ -43,7 +44,7 @@ jobs:
           command: npm run test
 
 workflows:
-  version: 2
+  version: 2.1
   build_test_deploy:
     jobs:
       - build
