--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,16 @@ jobs:
       - run:
           name: Test
           command: npm run test
+  deploy:
+    working_directory: ~/app
+    docker:
+      - image: circleci/node:10.9-browsers
+    steps:
+      - checkout
+      - install_dependencies
+    - run
+        name: Check git remote
+        command: git -vT git@${remote}
 
 workflows:
   version: 2.1
@@ -50,3 +60,6 @@ workflows:
       - test:
           requires:
             - build
+      - deploy:
+          requires:
+            - test
