--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             rm -rf * && mv ../dist/portfolio/* ./
             git add -A && git commit -m "Build {{ checksum "package-lock.json" }}-{{ .BuildNum }}"
             git config --global user.email ${email}
-            git config --global user.username ${username}
+            git config --global user.name ${username}
             git push origin master
 
 workflows:
