Add outputs for debugging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,11 @@ jobs:
             git config --global user.name "${GIT_REMOTE_NAME}"
             git init && git remote add origin ${GIT_REMOTE}
             git pull origin master
-            rm -rf * && mv ../dist/portfolio/* ./
+            ls ./            
+            rm -rf *
+            ls ../dist/portfolio
+            mv ../dist/portfolio/* ./
+            ls ./
             git add -A
             git commit -m "Build {{ checksum "package-lock.json" }}-{{ .BuildNum }}"
             git status
