Add filters on build and test workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,14 @@ workflows:
   version: 2.1
   build_test_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            tags:
+              only: /.*/
       - test:
+          filters:
+            tags:
+              only: /.*/
           requires:
             - build
       - deploy:
