--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
     steps:
       - restore_cache:
           keys: 
-            - dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
+            - dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install local dependencies
           command: npm install
@@ -27,7 +27,7 @@ jobs:
           command: echo ${CIRCLE_BRANCH}
       - install_dependencies
       - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}-{{ .BuildNum }}
+          key: dependency-cache-{{ checksum "package-lock.json" }
           paths:
             - ./node_modules
       - run:
